--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,50 +1,23 @@
-name: build
+name: Main Workflows
 
 on:
-  workflow_dispatch:
   push:
-    branches: main
+    branches: ["main","master"]
+  repository_dispatch:
+    types: [custom-event] 
+  workflow_dispatch:
+  pull_request:
+    branches: ["main","master"]
+
 
 jobs:
-  build-deploy:
-    runs-on: ubuntu-latest
+  call_env_workflow:
+    uses: computorg/workflows/.github/workflows/global-env.yml@main
+  call_quartopublish_workflow:
     permissions:
+      id-token: write
       contents: write
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
+      pages: write
+    uses: computorg/workflows/.github/workflows/publish-render.yml@main
+    needs: call_env_workflow
 
-      - name: Set up quarto
-        uses: quarto-dev/quarto-actions/setup@v2
-        with:
-          tinytex: true
-      
-      - name: Install Computo extension for Quarto
-        run: |
-            quarto add --no-prompt computorg/computo-quarto-extension
-            quarto add --no-prompt leovan/quarto-pseudocode
-      
-      - name: Install cURL Headers
-        run: sudo apt-get install libcurl4-openssl-dev
-        
-      - name: Set up python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.8.13' 
-      
-      - name: Install R
-        uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: '4.2.2'
-      
-      - name: Install R Dependencies with renv
-        uses: r-lib/actions/setup-renv@v2
-        with:
-          cache-version: 1
-        
-      - name: Render and Publish
-        uses: quarto-dev/quarto-actions/publish@v2
-        with:
-          target: gh-pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
